compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__blocks__block_with_parenthesised_expression_returning_from_function.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn b() {\n  {\n    1 + 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn b() {
  {
    1 + 2
  }
}


----- COMPILED NIX
let b = { }: 1 + 2; in { }
