compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__blocks__blocks_returning_functions.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn b() {\n  {\n    fn(cb) { cb(1) }\n  }\n  {\n    fn(cb) { cb(2) }\n  }\n  3\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn b() {
  {
    fn(cb) { cb(1) }
  }
  {
    fn(cb) { cb(2) }
  }
  3
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  b = { }: let _' = cb: cb 1; _'1 = cb: cb 2; in seqAll [ _' _'1 ] 3;
in
{ }
