compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__blocks__blocks_returning_use.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn b() {\n  {\n    use a <- fn(cb) { cb(1) }\n    a\n  }\n  {\n    use b <- fn(cb) { cb(2) }\n    b\n  }\n  3\n}\n    "
---
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  b =
    { }:
    let
      _' = (cb: cb 1) (a: a);
      _'1 = (cb: cb 2) (b: b);
    in
    seqAll [ _' _'1 ] 3;
in
{ }
