compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__blocks__nested_multiexpr_non_ending_blocks.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n    4\n  }\n  x\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  go =
    {}:
      let
        x =
          let
            _' = 1;
            _'1 = let _'1 = 2; in builtins.seq _'1 3;
          in seqAll [ _' _'1 ] 4;
      in x;
in {}
