compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__blocks__nested_simple_blocks.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    {\n      3\n    }\n  }\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  let x = {
    {
      3
    }
  }
  x
}


----- COMPILED NIX
let go = { }: let x = 3; in x; in { }
