compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__blocks__right_operator_sequence.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  {\n    1\n    2\n  } == 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  {
    1
    2
  } == 1
}


----- COMPILED NIX
let go = { }: (let _' = 1; in builtins.seq _' 2) == 1; in { }
